<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activiteis.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:title="@string/lbl_discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_large">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    app:progressMode="false"
                    app:selectedDotColor="@color/colorAccent" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSerials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flBanner"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium3"
                android:text="@string/best_popular_films_and_movies_lbl"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <include
                android:id="@+id/vpBestPopularMovieList"
                layout="@layout/view_pod_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestPopularFilmsAndSerials"
                android:layout_marginTop="@dimen/margin_medium2"
                android:layout_marginBottom="@dimen/margin_medium2" />

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_time"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium3"
                android:layout_marginEnd="@dimen/margin_medium2"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium3"
                    android:layout_marginTop="@dimen/margin_medium3"
                    android:text="@string/lbl_check_movie_show_times"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium3"
                    android:layout_marginBottom="@dimen/margin_medium3"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp" />
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCheckMovieShowTime"
                android:layout_marginTop="@dimen/margin_medium2"
                android:background="@color/colorPrimary"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText" />

            <FrameLayout
                android:id="@+id/flMoviesByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tabLayoutGenre"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="@dimen/margin_large"
                android:paddingBottom="@dimen/margin_large">

                <include
                    android:id="@+id/vpMovieByGenre"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flMoviesByGenre"
                android:layout_marginStart="@dimen/margin_medium2"
                android:layout_marginTop="@dimen/margin_medium3"
                android:text="@string/lbl_showcases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowcasesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium2"
                android:text="@string/lbl_more_showcases"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcases"
                android:layout_below="@id/tvMoreShowcasesLabel"
                android:paddingEnd="@dimen/margin_medium2"
                android:clipToPadding="false"
                android:layout_marginTop="@dimen/margin_medium2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <include
                android:id="@+id/vpActorList"
                layout="@layout/view_pod_actor_list"
                android:layout_below="@id/rvShowcases"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>